// fix tag wrapping in hover

--- a/foundations_ui/src/scss/views/input-metric.scss
+++ b/foundations_ui/src/scss/views/input-metric.scss
@@ -76,7 +76,7 @@
     text-align: center;
     padding-left: 0px;
     padding-right: 0px;
-    width: 176.5px;
+    width: $column-width;
     box-sizing: border-box;
     
     p{
