--- a/foundations_ui/src/scss/views/job-cell.scss
+++ b/foundations_ui/src/scss/views/job-cell.scss
@@ -63,8 +63,8 @@
   position: absolute;
   color: #fff;
   z-index: 1;
-  margin-top: 25px;
-  margin-left: -40px;
+  margin-top: -5px;
+  margin-left: -80px;
   text-align: center;
   padding: 5px 12px 5px 12px;
   border-radius: 5px;
